# Riddle_Tutorial

./: CMakeLists.txt  README.md  Riddle.cpp  Riddle.h  appDB.db  appDatabase.qrc  dbmanager.cpp  dbmanager.h  main.cpp
